--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 main > article {
-  height: 100vh;
-  width: 100%;
+  height: 100vh; /* important */
+  width: 100%; /* important */
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   position: absolute; /* important */
@@ -46,7 +46,7 @@ main > article > section:nth-child(odd) > div {
 
 main > article > section > div {
   height: 90vh;
-  width: 90vh;
+  width: 45%;
   display: flex;
   flex-flow: column wrap;
   justify-content: space-around;
@@ -55,7 +55,6 @@ main > article > section > div {
   font-weight: 700;
   color: #00008b;
   border-radius: 3%;
-  /* border: 0.2rem dashed; */
   padding: 2rem;
   background-color: #fff;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
@@ -153,33 +152,39 @@ main > article[data-status="becoming-active-from-after"] {
 }
 
 /* close-button  */
-.close-button {
+.sticky-item {
   background: transparent;
   color: #00008b;
   position: sticky;
   position: -webkit-sticky;
-  /* these below 2 line has to be arrange */
-  top: 5%;
-  left: 95%;
-  font-size: 2rem;
+  font-size: 1.8rem;
+  padding: 0.8rem;
+  border-radius: 70%;
   cursor: pointer;
+  left: 95%;
 }
 
-/* Scroll Up Button  */
+.close-button {
+  top: 5%;
+}
+
 .scroll-up {
-  background: transparent;
-  color: #00008b;
-  position: sticky;
-  position: -webkit-sticky;
-  /* these below 2 line has to be arrange */
   top: 87%;
-  left: 92%;
-  font-size: 2rem;
-  text-decoration: none;
-  padding: 1rem;
 }
 
-@media(max-width: 1200px) {  
+.close-button:hover, .scroll-up:hover {
+  background: #80ffd4;
+}
+
+.paragraph-text{
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  gap: 1rem;
+}
+
+@media(max-width: 1000px) {  
 
   main > article > section {
     flex-direction: column-reverse;
@@ -187,18 +192,25 @@ main > article[data-status="becoming-active-from-after"] {
   
   main > article > section > div {
     height: 40%;
-    flex-flow: column wrap;
+    width: 90%;
+    /* flex-flow: column wrap; */
+    flex-direction: column;
     font-size: 2rem;
+    font-size: 1rem;
   }
   
   .footer {
     height: 45%;
     width: 45%;
     font-size: 1rem;
-    /* flex-direction: row-reverse; */
     justify-content: space-around;
     align-items: stretch;
     flex-flow: column wrap;
+  }
+
+  .sticky-item{
+    font-size: 1.2rem;
+    padding: 0.5rem;
   }
   
   .article-div-button {
@@ -206,7 +218,12 @@ main > article[data-status="becoming-active-from-after"] {
   }
 
   /* visibility hidden on mobile devices */
-  .scroll-up {
+  /* .scroll-up {
     visibility: hidden;
+  } */
+
+  .paragraph-text{
+    font-size: 14px;
+    font-weight: normal;
   }
 }
